kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mypod
  template:
    metadata:
      labels:
        app: mypod 
    spec:
      containers:
        - name: mycontainer
          image: tncontaineregistry.azurecr.io/student1-client:v1
          ports:
           - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.1"
