kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: myingress
  labels: 
    app: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 80
